@@ -1404,8 +1404,8 @@
 	_(2738, ZEND_ASSIGN_POW_SPEC_CV_CV_OBJ) \
 	_(2739, ZEND_BIND_GLOBAL_SPEC_CV_CONST) \
 	_(2740, ZEND_COALESCE_SPEC_CONST) \
-	_(2741, ZEND_COALESCE_SPEC_TMP) \
-	_(2742, ZEND_COALESCE_SPEC_VAR) \
+	_(2741, ZEND_COALESCE_SPEC_TMPVAR) \
+	_(2742, ZEND_COALESCE_SPEC_TMPVAR) \
 	_(2744, ZEND_COALESCE_SPEC_CV) \
 	_(2745, ZEND_SPACESHIP_SPEC_CONST_CONST) \
 	_(2746, ZEND_SPACESHIP_SPEC_CONST_TMPVAR) \
