@@ -394,7 +394,7 @@ static uint32_t zend_vm_opcodes_flags[199] = {
 	0x00000707,
 	0x04046751,
 	0x00040301,
-	0x00002003,
+	0x00002007,
 	0x00000707,
 	0x03000000,
 	0x03000303,
